# Team_project_Speedometer

./: CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md
client/desktop/: main.cpp
client/desktop/include/: canvas.h  comservice.h  tcpservice.h  uartservice.h  window.h
client/desktop/src/: canvas.cpp  comservice.cpp  tcpservice.cpp  uartservice.cpp  window.cpp
client/esp32/: platformio.ini
client/esp32/lib/ESP32CAN/: CAN.c  CAN_config.h  can_regdef.h
client/esp32/src/: main.cpp
server/desktop/: README.md  main.cpp
server/desktop/include/: comservice.h  tcpservice.h  uartservice.h  window.h
server/desktop/src/: comservice.cpp  tcpservice.cpp  uartservice.cpp  window.cpp
server/esp32/: platformio.ini
server/esp32/lib/ESP32CAN/: CAN.h
server/esp32/src/: main.cpp
shared/: setting.h
